# pyimager

./: LICENSE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
src/pyimager/: README.txt  __init__.py  __main__.py  compress.py  compressing.py  data.py  designer.py  display.py  displaying.py  message.py  utils.py
test/: compressor.py  test.lkim  test.py
