[project]
name = "pyimager"
version = "1.2.2"
authors = [
  {name="Leander Kafemann", email="leander@kafemann.berlin" },
]
description = "display ims in console"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"pycols",
]

[project.urls]
Homepage = "https://github.com/LeanderKafemann/pyimager"