[project]
name = "pyimager"
version = "2.0.1"
authors = [
  {name="Leander Kafemann", email="leander@kafemann.berlin" },
]
description = "display ims in console or compress them"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
	"pycols",
]

[project.urls]
Homepage = "https://github.com/LeanderKafemann/pyimager"